Replacing 'administrator' references

--- a/docs/organizations/creating-organizations.mdx
+++ b/docs/organizations/creating-organizations.mdx
@@ -5,7 +5,7 @@ description: Learn how to create an organization in your Clerk instance.
 
 # Create an organization
 
-Organizations are created by your end users. Whichever signed-in user creates an organization takes on the admin role for that organization.
+Organizations are created by your end users. Whichever signed-in user creates an organization takes on the [Creator Role](/docs/organizations/roles-permissions#the-creator-role) for that organization.
 
 The only required parameter when creating a new organization is the organization name, which can be any string. In React and Next.js applications, the [`useOrganizationList()`](/docs/references/react/use-organization-list) hook returns the `createOrganization` method. In JavaScript applications, the same method is available directly on the [`Clerk` object](/docs/references/javascript/clerk/create-organization).
 
@@ -22,7 +22,7 @@ When creating an organization, you can specify an optional slug for the new orga
 <CodeBlockTabs type="framework" options={["Next.js", "React", "JavaScript"]}>
 ```jsx 
 // Form to create a new organization. The current user
-// will become the organization administrator.
+// will be given the Creator Role.
 import { useOrganizationList } from "@clerk/nextjs";
 import { FormEventHandler, useState } from "react";
 
@@ -52,7 +52,7 @@ export default function CreateOrganization() {
 
 ```jsx
 // Form to create a new organization. The current user
-// will become the organization administrator.
+// will receive the Creator Role.
 import { useOrganizationList } from "@clerk/clerk-react";
 import { FormEventHandler, useState } from "react";
 
