typos and tweaks

--- a/docs/references/nextjs/auth.mdx
+++ b/docs/references/nextjs/auth.mdx
@@ -94,7 +94,7 @@ export default async function Page() {
 
 # Return type of `auth`
 
-`auth` returns the [`Authentication`][auth-object] object with a few extra properties
+`auth` returns the [`Authentication`][auth-object] object with a few extra properties.
 
 ## Properties
 
