Update all the references to `basic_members`, `guest_members` and `admin`/Administrators to be in line with Roles (#547)
Co-authored-by: Haris Chaniotakis <chanioxaris@gmail.com>

--- a/docs/organizations/inviting-users.mdx
+++ b/docs/organizations/inviting-users.mdx
@@ -5,9 +5,9 @@ description: Learn how to invite new users to an organization.
 
 # Invite users to an organization
 
-Organization administrators have the ability to invite new users to their organization and manage those invitations. When an administrator invites a new member, an invitation email is sent out. The invitation recipient can be either an existing user of your application or a new user. If the latter is true, the user will need to register in order to accept the invitation.
+Organization members with appropriate [Permissions](/docs/organizations/roles-permissions) can invite new users to their organization and manage those invitations. When an administrator invites a new member, an invitation email is sent out. The invitation recipient can be either an existing user of your application or a new user. If the latter is true, the user will need to register in order to accept the invitation.
 
-In React and Next.js applications, the [`useOrganization()`](/docs/references/react/use-organization) hook returns the `organization` property, which is then used to call [`organization.inviteMember()`](/docs/references/javascript/organization/invitations#invite-member) passing in the recipient's email address and desired role (either `basic_member` or `admin`).
+In React and Next.js applications, the [`useOrganization()`](/docs/references/react/use-organization) hook returns the `organization` property, which is then used to call [`organization.inviteMember()`](/docs/references/javascript/organization/invitations#invite-member) passing in the recipient's email address and desired role.
 
 Administrators are also able to revoke organization invitations for users that have not yet joined, which will prevent the user from becoming an organization member. This is done by calling the [`revoke()`](/docs/references/javascript/organization-invitation#revoke) method on the invitations in the `invitationList` returned by the [`useOrganization()`](/docs/references/react/use-organization) hook.
 
@@ -24,7 +24,7 @@ import { useState } from 'react';
 function InviteMember() {
   const { organization } = useOrganization();
   const [emailAddress, setEmailAddress] = useState('');
-  const [role, setRole] = useState<'basic_member' | 'admin'>('basic_member');
+  const [role, setRole] = useState<'org:member' | 'admin'>('org:member');
   const [disabled, setDisabled] = useState(false);
 
   const onSubmit = async e => {
@@ -32,7 +32,7 @@ function InviteMember() {
     setDisabled(true);
     await organization.inviteMember({ emailAddress, role });
     setEmailAddress('');
-    setRole('basic_member');
+    setRole('org:member');
     setDisabled(false);
   };
 
@@ -57,9 +57,9 @@ function InviteMember() {
       <label>
         <input
           type="radio"
-          checked={role === 'basic_member'}
+          checked={role === 'org:member'}
           onChange={() => {
-            setRole('basic_member');
+            setRole('org:member');
           }}
         />{' '}
         Member
@@ -113,5 +113,5 @@ The `__clerk_status` query parameter is the outcome of the ticket verification a
 
 An example implementation on how to create an invitation by providing a redirect url using Clerk backend SDK:
 ```ts
-clerkClient.organizations.createOrganizationInvitation({ organizationId: 'org_2S7G8yGKaPp7nWn52idDTnxXkWW', emailAddress: 'member@myapp.com', inviterUserId: 'user_2ULtoAaFHBSep6Gnr5bphZXITmD', role: 'basic_member', redirectUrl: "https://myapp.com/invite-accepted" })
+clerkClient.organizations.createOrganizationInvitation({ organizationId: 'org_2S7G8yGKaPp7nWn52idDTnxXkWW', emailAddress: 'member@myapp.com', inviterUserId: 'user_2ULtoAaFHBSep6Gnr5bphZXITmD', role: 'org:member', redirectUrl: "https://myapp.com/invite-accepted" })
 ```
