--- a/docs/references/backend/organization/create-organization-invitation.mdx
+++ b/docs/references/backend/organization/create-organization-invitation.mdx
@@ -26,6 +26,6 @@ const organization = await clerkClient.organizations.createOrganizationInvitatio
 | `organizationId` | `string` | The organization ID of the organization a user is being invited to. |
 | `inviterUserId` | `string` | The user ID of the user creating the invitation. |
 | `emailAddress` | `string` | The email address to send the invitation to. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role to assign the invited user within the organization. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) to assign the invited user within the organization. |
 | `redirectUrl?` | `string` | The URL users will land at once the organization invitation has been accepted. | 
 | `publicMetadata?` | `Record<string, unknown>` | Metadata saved on the invitation that is visible to both your Frontend and Backend APIs. | 
