--- a/docs/references/javascript/organization-membership.mdx
+++ b/docs/references/javascript/organization-membership.mdx
@@ -13,7 +13,7 @@ The `OrganizationMembership` object is the model around an organization membersh
 | --- | --- | --- |
 | `id` | `string` | A unique identifier for this organization membership. |
 | `publicMetadata` | `object` | Custom metadata that are visible to the frontend. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the current user in the organization. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) of the current user in the organization. |
 | `publicUserData` | [`PublicUserData`](/docs/references/javascript/types/public-user-data) | Public information about the user that this membership belongs to. |
 | `organization` | [`Organization`](/docs/references/javascript/organization/organization) | The [`Organization`](/docs/references/javascript/organization/organization) object the membership belongs to. |
 | `createdAt` | `Date` | Date of the time the membership was created. |
@@ -47,7 +47,7 @@ Updates the member's role.
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new member. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) of the new member. |
 
 #### Returns
 
