--- a/docs/references/javascript/organization/invitations.mdx
+++ b/docs/references/javascript/organization/invitations.mdx
@@ -68,7 +68,7 @@ function inviteMember(params: InviteMemberParams): Promise<OrganizationInvitatio
 | Name | Type | Description |
 | --- | --- | --- |
 | `emailAddress` | `string` | The email address to invite. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new member. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) of the new member. |
 
 ### Returns
 
@@ -89,7 +89,7 @@ function inviteMembers(params: InviteMembersParams): Promise<OrganizationInvitat
 | Name | Type | Description |
 | --- | --- | --- |
 | `emailAddresses` | `string[]` | The email addresses to invite. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new members. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) of the new members. |
 
 ### Returns
 
