--- a/docs/organizations/managing-roles.mdx
+++ b/docs/organizations/managing-roles.mdx
@@ -3,15 +3,15 @@ title: Manage member roles in an organization
 description: Learn how to manage member roles in an organization.
 ---
 
-# Manage member roles in an organization
+# Manage member Roles in an organization
 
-Organization administrators have the ability to manage the member roles within an organization. Admins can change a member's role, remove them from an organization, and revoke organization invitations.
+Organization members with appropriate [Permissions](/docs/organizations/roles-permissions#permissions) can manage member [Roles](/docs/organizations/roles-permissions#roles) within an organization, including changing a member's Role, removing them from an organization, and revoking organization invitations.
 
-The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the current user's membership or the list of memberships for the currently active organization. The [`destroy`](/docs/references/javascript/organization-membership#destroy) and [`update`](/docs/references/javascript/organization-membership#update) methods can be called on the membership object to remove a member or change their role.
+The [`useOrganization()`](/docs/references/react/use-organization) hook can be used to retrieve the current user's membership or the list of memberships for the currently active organization. The [`destroy`](/docs/references/javascript/organization-membership#destroy) and [`update`](/docs/references/javascript/organization-membership#update) methods can be called on the membership object to remove a member or change their Role.
 
 The [`useOrganization()`](/docs/references/react/use-organization) hook can also be used to retrieve the list of invitations for the currently active organization. The [`revoke`](/docs/references/javascript/organization-invitation#revoke) method can be called on the invitation object to revoke the invitation.
 
-Methods for [changing a member's role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview). 
+Methods for [changing a member's Role](/docs/references/backend/organization/update-organization-membership), [removing a member](/docs/references/backend/organization/delete-organization-membership), and [revoking an invitation](/docs/references/backend/organization/revoke-organization-invitation) are also available on the [Backend API](/docs/references/backend/overview). 
 
 ## Usage
 
@@ -108,7 +108,7 @@ function AdminControls({
         Remove member
       </button>{" "}
       {membership.role === "admin" ? (
-        <button disabled={disabled} onClick={() => changeRole("basic_member")}>
+        <button disabled={disabled} onClick={() => changeRole("org:member")}>
           Change to member
         </button>
       ) : (
@@ -154,7 +154,7 @@ function InvitationList() {
 function InviteMember(){
   const { organization } = useOrganization();
   const [emailAddress, setEmailAddress] = useState("");
-  const [role, setRole] = useState<"basic_member" | "admin">("basic_member");
+  const [role, setRole] = useState<"org:member" | "admin">("org:member");
   const [disabled, setDisabled] = useState(false);
 
   const onSubmit = async (e) => {
@@ -162,7 +162,7 @@ function InviteMember(){
     setDisabled(true);
     await organization.inviteMember({ emailAddress, role });
     setEmailAddress("");
-    setRole("basic_member");
+    setRole("org:member");
     setDisabled(false);
   };
 
@@ -187,9 +187,9 @@ function InviteMember(){
       <label>
         <input
           type="radio"
-          checked={role === "basic_member"}
+          checked={role === "org:member"}
           onChange={() => {
-            setRole("basic_member");
+            setRole("org:member");
           }}
         />{" "}
         Member
@@ -292,7 +292,7 @@ function AdminControls({
         Remove member
       </button>{" "}
       {membership.role === "admin" ? (
-        <button disabled={disabled} onClick={() => changeRole("basic_member")}>
+        <button disabled={disabled} onClick={() => changeRole("org:member")}>
           Change to member
         </button>
       ) : (
@@ -338,7 +338,7 @@ function InvitationList() {
 function InviteMember(){
   const { organization } = useOrganization();
   const [emailAddress, setEmailAddress] = useState("");
-  const [role, setRole] = useState<"basic_member" | "admin">("basic_member");
+  const [role, setRole] = useState<"org:member" | "admin">("org:member");
   const [disabled, setDisabled] = useState(false);
 
   const onSubmit = async (e) => {
@@ -346,7 +346,7 @@ function InviteMember(){
     setDisabled(true);
     await organization.inviteMember({ emailAddress, role });
     setEmailAddress("");
-    setRole("basic_member");
+    setRole("org:member");
     setDisabled(false);
   };
 
@@ -371,9 +371,9 @@ function InviteMember(){
       <label>
         <input
           type="radio"
-          checked={role === "basic_member"}
+          checked={role === "org:member"}
           onChange={() => {
-            setRole("basic_member");
+            setRole("org:member");
           }}
         />{" "}
         Member
@@ -415,7 +415,7 @@ function InviteMember(){
           updateBtn.addEventListener("click", async function(e) {
             e.preventDefault();
             const role = membership.role === "admin" ?
-              "basic_member" :
+              "org:member" :
               "admin";
             await membership.update({ role });
           });
@@ -492,7 +492,7 @@ function InviteMember(){
         try {
           await currentOrganization.inviteMember({
             emailAddress: inputEl.value,
-            role: "basic_member",
+            role: "org:member",
           });
         } catch (err) {
           console.error(err);
