--- a/docs/references/javascript/organization/members.mdx
+++ b/docs/references/javascript/organization/members.mdx
@@ -21,7 +21,7 @@ Retrieve the members of the currently active organization.
 | --- | --- | --- |
 | `initialPage?` | `number` | A number that can be used to skip the first n-1 pages. For example, if `initialPage` is set to 10, it is will skip the first 9 pages and will fetch the 10th page. |
 | `pageSize?` | `number` | A number that indicates the maximum number of results that should be returned for a specific page. |
-| `role?` | `('admin' \| 'basic_member' \| 'guest_member')[]` | The roles of memberships that will be included in the response. |
+| `role` | `string` | The [Roles](/docs/organizations/roles-permissions) of memberships that will be included in the response. |
 
 <Callout type="danger">
   `GetMembershipsParams` was updated to `GetMembersParams` in September, 2023. The `limit` and `offset` parameters are now deprecated.
@@ -49,7 +49,7 @@ Please note that only administrators can add members to an organization.
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The ID of the user that will be added as a member to the organization. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role that the user will have in the organization. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) that the user will have in the organization. |
 
 ### Returns
 
@@ -70,7 +70,7 @@ Updates a member based on the `userId`. Currently, only a user's role can be upd
 | Name | Type | Description |
 | --- | --- | --- |
 | `userId` | `string` | The user identifier. |
-| `role` | `'admin' \| 'basic_member' \| 'guest_member'` | The role of the new member. |
+| `role` | `string` | The [Role](/docs/organizations/roles-permissions) of the new member. |
 
 ### Returns
 
