--- a/docs/references/javascript/session.mdx
+++ b/docs/references/javascript/session.mdx
@@ -125,8 +125,8 @@ type CheckAuthorizationParams =
 
 | Name | Type | Description |
 | --- | --- | --- |
-| `role` | `string` | You can pass any of the clerk default role keys or the ones that you have defined. |
-| `permission` | `string` | You can pass any of the clerk default permissoin keys or the ones that you have defined. |
+| `role` | `string` | Accepts [Role](/docs/organizations/roles-permissions#roles) key |
+| `permission` | `string` | Accepts [Permission](/docs/organizations/roles-permissions#permissions) key |
 
 #### Returns
 
