--- a/docs/quickstarts/react.mdx
+++ b/docs/quickstarts/react.mdx
@@ -1,10 +1,9 @@
 ---
-title: Use Clerk with React
+title: Add authentication and user management to your React app with Clerk
 description: Learn how to use Clerk to quickly and easily add secure authentication and user management to your React application.
 ---
 
 <TutorialHero 
-  quickstart="react"
   exampleRepo={[ 
     {
       title: "React Quickstart Repo",
@@ -16,18 +15,15 @@ description: Learn how to use Clerk to quickly and easily add secure authenticat
     {
       title: "Set up a Clerk application",
       link: "https://clerk.com/docs/quickstarts/setup-clerk"
-    },
-    {
-      title: "Create a React application using Vite",
-      link: "https://vitejs.dev/guide/#scaffolding-your-first-vite-project"
     }
   ]}
 >
+- Create a new React application using Vite
 - Install `@clerk/clerk-react`
 - Set up your environment keys
 - Import the Publishable Key
 - Wrap your React app in `<ClerkProvider />`
-- Protecting your content
+- Use Clerk's control components to protect your content
 - Embed the `<SignInButton />` and `<SignOutButton />`
 - Deploy your application
 </TutorialHero>
@@ -90,6 +86,7 @@ In your React project's root folder, you may have an `.env` file alongside `pack
 Add the following code to your `.env.local` file to set your public and secret keys.
 
 **Pro tip!** If you are signed into your [Clerk Dashboard](https://dashboard.clerk.com/last-active?path=api-keys), you can copy your publishable key below.
+
 <InjectKeys>
 
 ```sh filename=".env"
@@ -149,10 +146,9 @@ ReactDOM.createRoot(document.getElementById('root')!).render(
 )
 ```
 
-## Protecting your content
+### Use Clerk's control components to protect your content
 
-You can use the `<SignedIn />` and `<SignedOut />` control components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components reuires the user be signed out. Add some basic content and wrap some of with the `<SignedOut />` component and other content with the `<SignedIn />` component. 
-
+You can use the `<SignedIn />` and `<SignedOut />` control components to restrict access to content, or even whole pages. The `<SignedIn />` component requires the user be signed in to view the content inside the tags. The `<SignedOut />` components requires the user to be signed out.
 
 ```tsx filename="src/App.tsx {1, 7-12}
 import { SignedOut, SignedIn } from "@clerk/clerk-react"
@@ -162,10 +158,10 @@ function App() {
   return (
     <div>
       <SignedOut>
-        <p>This content is public</p>
+        <p>This content is public. Only signed out users can see this.</p>
       </SignedOut>
       <SignedIn>
-        <p>This content ic private</p>
+        <p>This content is private. Only signed in users can see this.</p>
       </SignedIn>
     </div>
   )
@@ -178,9 +174,9 @@ At this point, your application should use Clerk's [Account Portal](/docs/accoun
 
 ### Embed the `<SignInButton />` and `<SignOutButton />`
 
-Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are unstyled components that you can use to either create a basic button or to wrap around your styled button and turn it into a Sign In or Sign Out button.
+Clerk offers a set of [prebuilt components](/docs/components/overview) to add functionality to your app with minimal effort. The [`<SignInButton />`](/docs/components/unstyled/sign-in-button) and [`<SignOutButton />`](/docs/components/unstyled/sign-out-button) are *unstyled* components that you can use to either create a basic button or to wrap around your styled button and turn it into a sign-in or sign-out button.
 
-Add the following anywhere inside `<ClerkProvider />` in your app. First add `import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react";` to the top of your file. Then add the `<SignInButton />` inside of the `<SignedOut />` tags and the `<SignOutButton />` inside of the `<SignedIn />` tags. Restart your application
+The example below is a page that would show a `<SignInButton />` to users that are signed out, or a `<SignOutButton />` to users that are signed in. You can see that the prop `afterSignOutUrl` is passed to the `<SignOutButton />`. The `afterSignOutUrl` prop lets you customize what page the user will be redirected to after sign out. In this example, the user is redirected to the homepage (`/`) of the application.
 
 ```tsx filename="src/App.tsx {1, 7-14}
 import { SignOutButton, SignInButton, SignedIn, SignedOut } from "@clerk/clerk-react"
@@ -191,11 +187,11 @@ function App() {
     <div>
       <SignedOut>
         <SignInButton />
-        <p>This content is public</p>
+        <p>This content is public. Only signed out users can see the SignInButton above this text.</p>
       </SignedOut>
       <SignedIn>
         <SignOutButton afterSignOutUrl="/" />
-        <p>This content ic private</p>
+        <p>This content is private. Only signed in users can see the SignOutButton above this text.</p>
       </SignedIn>
     </div>
   )
@@ -203,7 +199,8 @@ function App() {
 
 export default App
 ```
-You can now visit your application and use the buttons to sign-in to your application and see the protected content and the protected `<SignOutButton />`
+
+If you copied the example above, you can start your React application via `npm run dev`, visit `http://localhost:5173`, and sign in to see the protected content and the protected `<SignOutButton />`. Select the sign-out button to see the public content and the `<SignInButton />`.
 
 ### Deploy your application
 
@@ -212,13 +209,15 @@ You're ready to [deploy your app to production](/docs/deployments/overview) and 
 
 ## You're authenticated!
 
-Congratulations! Your app is now only available to authenticated users! But this is just the first step. If you would like to clone or investigate this application, please check out:
+Congratulations! Your app is now using Clerk to authenticate users. But this is just the first step. If you would like to clone or investigate this application, please check out:
 
 * [Clerk + React Quickstart](https://github.com/clerk/clerk-react-quickstart)
 
 ## Next step: Add routing with React Router
 
-React has many options for handling routing and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API based router (nicknamed Data Router) please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
+React has many options for handling routing and you are free to choose the option that suits you best. If you would like to learn how to integrate React Router's latest Data API-based router (nicknamed Data Router), please see the [Add React Router to your Clerk Powered application](/docs/references/react/add-react-router) guide. 
+
+You can also learn more about Clerk components, how to customize them, and how to use Clerk's client side helpers by checking out the following guides:
 
 <div className="container mx-auto my-4">
   <div className="grid grid-cols-1 gap-6 md:grid-cols-2">
