Add screenshots to creator role guide

--- a/docs/organizations/creator-role.mdx
+++ b/docs/organizations/creator-role.mdx
@@ -4,18 +4,43 @@ description: Learn how to assign Clerk's Creator Role to any other Role in an Or
 content-type: guide
 ---
 
-# Creator Role
+# Reassign the Creator Role
 
-When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the default Role of `admin`. By default, the Admin Role is the Creator Role.
+When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned whichever Role is that org's [Creator Role](/docs/organizations/roles-permissions#the-creator-role). By default, that Role is `admin`. You may want to remove the `admin` Role or assign the Creator Role to another Role. This guide will show you how.
 
-You can't **delete** an Organization Role if it's used as the Organization Creator Role. But, you **can** reassign the Creator Role to any other Role. For example, if you want to delete the Admin role, you will have to assign another Role the Creator Role.
+You can't **delete** an Organization Role if it's used as the Organization Creator Role. But, you **can** reassign the Creator Role to any other Role with the right Permissions. For example, if you want to delete the `admin` role, you will have to assign another Role the Creator Role.
 
 To reassign the Creator Role, the target Role must have the following [System Permissions](/docs/organizations/roles-permissions#system-permissions):
 
-- Read members (`org:sys_memberships:read`)
 - Manage members (`org:sys_memberships:manage`)
+- Read members (`org:sys_memberships:read`)
 - Delete organization (`org:sys_profile:delete`)
 
-TODO: screenshot guide
+## Give a Role the necessary Permissions and assign it as the Creator Role
+
+In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). If you haven't already, [create a new Role](/docs/organizations/create-roles-permissions#create-a-new-role-for-your-organization) or select an existing Role from the list.
+
+1. Select "Show System Permissions."
+2. Select "Manage members," "Read members," and "Delete organization" System Permissions.
+3. At the top of the screen, open the "..." menu to the right of the Role's name.
+4. Select the "Set as Creator Role" option from the dropdown.
+
+<Images 
+  width={1512}
+  height={914}
+  src="/docs/images/guides/roles_set-creator-role-from-profile.png"
+  alt=" "
+/>
+
+## Assign the Creator Role to an exisitng Role in the Roles list
+
+If a Role has the necessary Permissions above, you can set it to the Creator Role in the Organization's list of Roles. Opening the  Role's "..." menu and selecting "Set as Creator Role."
+
+<Images 
+  width={1512}
+  height={914}
+  src="/docs/images/guides/roles_set-creator-role-from-list.png"
+  alt=" "
+/>
 
 Learn more about Roles and Permissions in [Roles and Permissions](/docs/organizations/roles-permissions).
