adding Dashboard guide for roles and permissions

--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -3,16 +3,29 @@ title: Create custom Roles and assign Permissions with Clerk
 description: Use the Clerk Dashboad to create and assign Roles and Permissions to users in your Organization.
 ---
 
-# Create custom Roles and assign Permissions with Clerk
+# Create Roles and assign Permissions with Clerk
+
+In the Clerk Dashboard, you can create Roles, assign Permissions to them, and change users' Roles.
 
 ## Create a new Role for your Organization
 
+1. In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). 
+2. Select "Create new role".
+3. Give the Role a name, a key to reference it by in the format "`org:<role>`", and a description.
+4. Select "Create role".
+
 ## Assign Permissions to a Role
+
+1. In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Permissions** tab](https://dashboard.clerk.com/last-active?path=permissions). 
+2. Select "Create new permission".
+3. Give the Permission a name, a key to reference it by in the format "`org:<resource>:<action>`", and a description.
+4. Select "Create permission".
 
 ## Change a user’s Role in an Organization
 
----
+1. In your Clerk Dashboard, navigate to **Organizations** and select the Organization.
+2. Select the [**Members** tab](https://dashboard.clerk.com/last-active?path=members). 
+3. In the list of members, find the one whose Role you want to change.
+4. Select another Role from their Role dropdown.
 
-## Editor's Notes
-
-* You can update membership both from the dashboard (admin/developer/admin of org view), and also from the organization profile (end user view).
+Administrators can also change a user's organization during impersonation using the [organization profile](/docs/components/organization/organization-profile).
