--- a/docs/organizations/creator-role.mdx
+++ b/docs/organizations/creator-role.mdx
@@ -18,7 +18,7 @@ To reassign the Creator Role, the target Role must have the following [System Pe
 
 ## Give a Role the necessary Permissions and assign it as the Creator Role
 
-In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). If you haven't already, [create a new Role](/docs/organizations/create-roles-permissions#create-a-new-role-for-your-organization) or select an existing Role from the list.
+In your Clerk Dashboard, navigate to **Organization Settings** and select the [Roles tab](https://dashboard.clerk.com/last-active?path=roles). If you haven't already, [create a new Role](/docs/organizations/create-roles-permissions#create-a-new-role-for-your-organization) or select an existing Role from the list.
 
 1. Select "Show System Permissions."
 2. Select "Manage members," "Read members," and "Delete organization" System Permissions.
