--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -9,23 +9,23 @@ In the Clerk Dashboard, you can create Roles, assign Permissions to them, and ch
 
 ## Create a new Role for your Organization
 
-1. In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). 
+1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). 
 2. Select "Create new role".
 3. Give the Role a name, a key to reference it by in the format "`org:<role>`", and a description.
 4. Select "Create role".
 
 ## Assign Permissions to a Role
 
-1. In your Clerk Dashboard, navigate to **Organization Settings** and select the [**Permissions** tab](https://dashboard.clerk.com/last-active?path=permissions). 
+1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **Permissions** tab. 
 2. Select "Create new permission".
 3. Give the Permission a name, a key to reference it by in the format "`org:<resource>:<action>`", and a description.
 4. Select "Create permission".
 
 ## Change a user’s Role in an Organization
 
-1. In your Clerk Dashboard, navigate to **Organizations** and select the Organization.
-2. Select the [**Members** tab](https://dashboard.clerk.com/last-active?path=members). 
+1. In your Clerk Dashboard, navigate to [**Organizations**](https://dashboard.clerk.com/last-active?path=organizations) and select an Organization.
+2. Select the **Members** tab. 
 3. In the list of members, find the one whose Role you want to change.
 4. Select another Role from their Role dropdown.
 
-Administrators can also change a user's organization during impersonation using the [organization profile](/docs/components/organization/organization-profile).
+Administrators can also change a user's organization during impersonation using the [organization profile](/docs/components/organization/organization-profile).https://dashboard.clerk.com/apps/app_2Ys3AaGJ3KvvXvnzCJuC1KbgSaf/instances/ins_2Ys3AhUipLEU27KdaQWsEeiUcjD
