remove tab link

--- a/docs/organizations/create-roles-permissions.mdx
+++ b/docs/organizations/create-roles-permissions.mdx
@@ -9,7 +9,7 @@ In the Clerk Dashboard, you can create Roles, assign Permissions to them, and ch
 
 ## Create a new Role for your Organization
 
-1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the [**Roles** tab](https://dashboard.clerk.com/last-active?path=roles). 
+1. In your Clerk Dashboard, navigate to [**Organization Settings**](https://dashboard.clerk.com/last-active?path=organizations-settings) and select the **Roles** tab. 
 2. Select "Create new role".
 3. Give the Role a name, a key to reference it by in the format "`org:<role>`", and a description.
 4. Select "Create role".
