moving the roles and permissions page url

--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -65,4 +65,5 @@ For example, you could create a new Role “sales” (`org:sales`) and a new Per
 
 * [Create Roles and Permissions in the Clerk Dashboard](/docs/organizations/create-roles-permissions)
 * [Check out Clerk's pre-built `<Protect />` component](/docs/components/protect)
-* [Allow and limit access to resources by Role and Permissions](/docs/organizations/permissions-show-hide-content)
+* [Allow and limit access to resources by Role and Permissions](/docs/organizations/restrict-access)
+* [Reassign the Creator Role](/docs/organizations/creator-role)
