--- a/docs/authentication/saml-at-clerk.mdx
+++ b/docs/authentication/saml-at-clerk.mdx
@@ -93,7 +93,7 @@ The last step is to map your IdP claims to Clerk’s `email`, `firstName`, `last
 
 | Clerk Field | Azure AD Claim Names | Google Claim Names | Okta Claim Names |
 | --- | --- | --- | --- |
-| `email` (required) | `user.userprincipalname` | Basic Information > Primary email | `user.email` |
+| `mail` (required) | `user.userprincipalname` | Basic Information > Primary email | `user.email` |
 | `firstName` | `user.givenname` | Basic Information > First name | `user.firstName` |
 | `lastName` | `user.surname` | Basic Information > Last name | `user.lastName` |
 
