Roles and Permissions updates

--- a/docs/organizations/roles-permissions.mdx
+++ b/docs/organizations/roles-permissions.mdx
@@ -15,11 +15,11 @@ Roles determine a user's level of access to the Organization. You can extend a R
 
 For each instance there are currently two default roles:
 
-- **Admin (`admin`)** Offers full access to Organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage Organizations and Organization memberships.
-- **Member (`org:member`)** The default role for new Organization members. Access to Organization resources is limited to only Read members Permission by default. They cannot manage Organizations and Organization memberships but can view information about the Organization and other members in it. 
+- **Admin (`org:admin`)** Offers full access to Organization resources. Members with the admin role have all the [System Permissions](#system-permissions). They can fully manage the Organization and Organization memberships.
+- **Member (`org:member`)** Offers limited access to Organization resources. Access to Organization resources is limited to only Read members Permission by default. They cannot manage the Organization and Organization memberships but can view information about other members in it.
 
 <Callout type="info">
-If you created an Organization before December 2023, the Member Role is `basic_member`.
+If you enabled Organizations for your Application before December 2023, the Admin Role is `admin` and the Member Role is `basic_member`, instead of `org:admin` and `org:member`
 </Callout>
 
 ### Custom Roles
@@ -30,7 +30,7 @@ Custom Roles can be granted Permissions and access. For example you can create a
 
 ### The Creator Role
 
-When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the default Role of `admin`. By default, `admin` is the Creator Role. 
+When a user creates a new Organization, that user is automatically added as the Organization's first member and assigned the Creator Role. By default, Admin is the Creator Role.
 
 <Callout type="warning">
 You can't delete a Role if it's used as the Organization Creator Role. However, you can [reassign the Creator Role to another role](/docs/organizations/creator-role).
